# recipe-api

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
app/: __init__.py  auth.py  config.py  main.py
app/db/: __init__.py  database.py
app/models/: __init__.py  grocery.py  meal_plan.py  recipe.py  schemas.py
app/routers/: __init__.py  chat.py  collections.py  extract.py  grocery.py  health.py  meal_plans.py  recipes.py  tts.py  users.py
app/services/: __init__.py  extractor.py  llm_client.py  openai_client.py  prompts.py  storage.py  video.py  website.py
migrations/: 001_add_user_and_public_fields.py  002_add_grocery_items.py  003_normalize_tiktok_urls.py  004_fix_tiktok_urls.py  004b_fix_tiktok_urls_batch.py  005_add_original_extracted.py  006_add_saved_recipes.py  007_add_collections.py  008_add_recipe_notes.py  009_add_recipe_versions.py  010_add_meal_plan_entries.py  011_add_extractor_display_name.py  012_add_shared_grocery.py  013_add_extraction_warning.py  014_add_total_minutes.py
